--- a/main.css
+++ b/main.css
@@ -170,6 +170,14 @@ pre {
   .site-title, .site-title:visited {
     color: #424242; }
 
+@media (max-width: 480px)
+    {
+       .site-title
+       {
+           font-size: 18px;
+       }
+    }
+
 .site-nav {
   float: right;
   line-height: 54px; }
